--- a/style.scss
+++ b/style.scss
@@ -55,10 +55,21 @@ main {
         left: 50%;
         transform: translate(-50%, -50%) scale(0) rotate(-90deg);
         opacity: 0;
-
         transition: all 0.2s ease;
 
-        
     }
   }
+  
 }
+@media (max-width:720px) {
+  main{
+  .wraper{
+    i{
+      font-size: 25vw;
+    }
+  }
+  }
+  
+
+    
+  }
